--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "mathrace",
   "version": "1.0.0",
-  "description": "",
+  "description": "CSE264 Final Project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "John Kusner <jkusner321@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
